--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html>
 <head>
 	<title>figma.com</title>
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+	
 	<link rel="stylesheet" type="text/css" href="style.css">
+
 </head>
 <body>
 	<header>
@@ -34,12 +36,31 @@
 		<a href="#" class="btn btn-half my-5">BOOK A FREE CLASS</a>
 		</div>
 	</header>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+	<h4><b>YET IT IS POSSIBLE</b></h4>
+	<H6><b>WITNESS IS THE  RESULT OF OUR STUDENTS</b></H6>
+	<div class="container">
+		<div class="box">
+			<div class="icon"><i class="fa fa-search" aria-hidden="true"></i></div>
+			<div class="content">
+				<h3>PHYSICS</h3>
+				<P>PHYSICS IS A BORING SUBJECT BUT FOR PASSING MARKS YOU HAVE TO LEARN</P>
+			</div>
+		</div>
+		<div class="box">
+			<div class="icon"><i class="fa fa-user" aria-hidden="true"></i></div>
+			<div class="content">
+				<h3>CHEMISTRY</h3>
+				<P>PHYSICS IS A BORING SUBJECT BUT FOR PASSING MARKS YOU HAVE TO LEARN</P>
+			</div>
+		</div>
+		<div class="box">
+			<div class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i></div>
+			<div class="content">
+				<h3>HISTORY</h3>
+				<P>PHYSICS IS A BORING SUBJECT BUT FOR PASSING MARKS YOU HAVE TO LEARN</P>
+			</div>
+		</div>
+	</div>
 	<div class="form-popup" id="myForm">
 		<form action="/action_page.php" class="form-container">
 		  <h1>Login</h1>
