--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>figma.com</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-	
+
 	<link rel="stylesheet" type="text/css" href="style.css">
 
 </head>
@@ -60,6 +60,103 @@
 				<P>PHYSICS IS A BORING SUBJECT BUT FOR PASSING MARKS YOU HAVE TO LEARN</P>
 			</div>
 		</div>
+		<div class="box">
+			<div class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i></div>
+			<div class="content">
+				<h3>HISTORY</h3>
+				<P>PHYSICS IS A BORING SUBJECT BUT FOR PASSING MARKS YOU HAVE TO LEARN</P>
+			</div>
+		</div>
+		<div class="box">
+			<div class="icon"><i class="fa fa-search" aria-hidden="true"></i></div>
+			<div class="content">
+				<h3>PHYSICS</h3>
+				<P>PHYSICS IS A BORING SUBJECT BUT FOR PASSING MARKS YOU HAVE TO LEARN</P>
+			</div>
+		</div>
+		<div class="box">
+			<div class="icon"><i class="fa fa-user" aria-hidden="true"></i></div>
+			<div class="content">
+				<h3>CHEMISTRY</h3>
+				<P>PHYSICS IS A BORING SUBJECT BUT FOR PASSING MARKS YOU HAVE TO LEARN</P>
+			</div>
+		</div>
+		<div class="box">
+			<div class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i></div>
+			<div class="content">
+				<h3>HISTORY</h3>
+				<P>PHYSICS IS A BORING SUBJECT BUT FOR PASSING MARKS YOU HAVE TO LEARN</P>
+			</div>
+		</div>
+		<div class="box">
+			<div class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i></div>
+			<div class="content">
+				<h3>HISTORY</h3>
+				<P>PHYSICS IS A BORING SUBJECT BUT FOR PASSING MARKS YOU HAVE TO LEARN</P>
+			</div>
+	</div>
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+	<div class="container">
+		<div class="box">
+			<div class="icon"><i class="fa fa-search" aria-hidden="true"></i></div>
+			<div class="content">
+				<h3>PHYSICS</h3>
+				<P>PHYSICS IS A BORING SUBJECT BUT FOR PASSING MARKS YOU HAVE TO LEARN</P>
+			</div>
+		</div>
+		<div class="box">
+			<div class="icon"><i class="fa fa-user" aria-hidden="true"></i></div>
+			<div class="content">
+				<h3>CHEMISTRY</h3>
+				<P>PHYSICS IS A BORING SUBJECT BUT FOR PASSING MARKS YOU HAVE TO LEARN</P>
+			</div>
+		</div>
+		<div class="box">
+			<div class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i></div>
+			<div class="content">
+				<h3>HISTORY</h3>
+				<P>PHYSICS IS A BORING SUBJECT BUT FOR PASSING MARKS YOU HAVE TO LEARN</P>
+			</div>
+		</div>
+		<div class="box">
+			<div class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i></div>
+			<div class="content">
+				<h3>HISTORY</h3>
+				<P>PHYSICS IS A BORING SUBJECT BUT FOR PASSING MARKS YOU HAVE TO LEARN</P>
+			</div>
+		</div>
+		<div class="box">
+			<div class="icon"><i class="fa fa-search" aria-hidden="true"></i></div>
+			<div class="content">
+				<h3>PHYSICS</h3>
+				<P>PHYSICS IS A BORING SUBJECT BUT FOR PASSING MARKS YOU HAVE TO LEARN</P>
+			</div>
+		</div>
+		<div class="box">
+			<div class="icon"><i class="fa fa-user" aria-hidden="true"></i></div>
+			<div class="content">
+				<h3>CHEMISTRY</h3>
+				<P>PHYSICS IS A BORING SUBJECT BUT FOR PASSING MARKS YOU HAVE TO LEARN</P>
+			</div>
+		</div>
+		<div class="box">
+			<div class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i></div>
+			<div class="content">
+				<h3>HISTORY</h3>
+				<P>PHYSICS IS A BORING SUBJECT BUT FOR PASSING MARKS YOU HAVE TO LEARN</P>
+			</div>
+		</div>
+		<div class="box">
+			<div class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i></div>
+			<div class="content">
+				<h3>HISTORY</h3>
+				<P>PHYSICS IS A BORING SUBJECT BUT FOR PASSING MARKS YOU HAVE TO LEARN</P>
+			</div>
 	</div>
 	<div class="form-popup" id="myForm">
 		<form action="/action_page.php" class="form-container">
