--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 	<title>figma.com</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
+
 
 	<link rel="stylesheet" type="text/css" href="style.css">
 
@@ -38,6 +40,18 @@
 	</header>
 	<h4><b>YET IT IS POSSIBLE</b></h4>
 	<H6><b>WITNESS IS THE  RESULT OF OUR STUDENTS</b></H6>
+	<div class="row">
+		<div class="column">
+			<img src="report.jpg" style="width: 100%">
+		</div>
+		<div class="column">
+			<img src="report.jpg" style="width: 100%">
+		</div>
+		<div class="column">
+			<img src="report.jpg" style="width: 100%">
+		</div>
+		<h4><b>WHAT DO YOU GET FROM US</b></h4>
+	</div>
 	<div class="container">
 		<div class="box">
 			<div class="icon"><i class="fa fa-search" aria-hidden="true"></i></div>
@@ -81,26 +95,26 @@
 				<P>PHYSICS IS A BORING SUBJECT BUT FOR PASSING MARKS YOU HAVE TO LEARN</P>
 			</div>
 		</div>
+	
+</div>
+	<div class="container-main">
 		<div class="box">
-			<div class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i></div>
-			<div class="content">
-				<h3>HISTORY</h3>
-				<P>PHYSICS IS A BORING SUBJECT BUT FOR PASSING MARKS YOU HAVE TO LEARN</P>
-			</div>
-		</div>
-		<div class="box">
-			<div class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i></div>
-			<div class="content">
-				<h3>HISTORY</h3>
-				<P>PHYSICS IS A BORING SUBJECT BUT FOR PASSING MARKS YOU HAVE TO LEARN</P>
-			</div>
-	</div>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		<p ><b>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</b></p>
+		</div>
+	</div>
+
+	
 	<div class="container">
 		<div class="box">
 			<div class="icon"><i class="fa fa-search" aria-hidden="true"></i></div>
@@ -116,20 +130,7 @@
 				<P>PHYSICS IS A BORING SUBJECT BUT FOR PASSING MARKS YOU HAVE TO LEARN</P>
 			</div>
 		</div>
-		<div class="box">
-			<div class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i></div>
-			<div class="content">
-				<h3>HISTORY</h3>
-				<P>PHYSICS IS A BORING SUBJECT BUT FOR PASSING MARKS YOU HAVE TO LEARN</P>
-			</div>
-		</div>
-		<div class="box">
-			<div class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i></div>
-			<div class="content">
-				<h3>HISTORY</h3>
-				<P>PHYSICS IS A BORING SUBJECT BUT FOR PASSING MARKS YOU HAVE TO LEARN</P>
-			</div>
-		</div>
+		
 		<div class="box">
 			<div class="icon"><i class="fa fa-search" aria-hidden="true"></i></div>
 			<div class="content">
@@ -158,22 +159,13 @@
 				<P>PHYSICS IS A BORING SUBJECT BUT FOR PASSING MARKS YOU HAVE TO LEARN</P>
 			</div>
 	</div>
-	<div class="form-popup" id="myForm">
-		<form action="/action_page.php" class="form-container">
-		  <h1>Login</h1>
-	  
-		  <label for="email"><b>Email</b></label>
-		  <input type="text" placeholder="Enter Email" name="email" required>
-	  
-		  <label for="psw"><b>Password</b></label>
-		  <input type="password" placeholder="Enter Password" name="psw" required>
-	  
-		  <button type="submit" class="btn">Login</button>
-		  <button type="submit" class="btn cancel" onclick="closeForm()">Close</button>
-		</form>
-	  </div>
-	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-</body>
+	<h4><b>SAMPLE VIDEO TUTORIALS</b></h4>
+	<div class="youtube" >
+		<div class="box">
+			<h3>YOU TUBE LINK1</h3>
+			<p>link www.harshraj.com</p>
+		</div>
+	</div>
+
+    </body>
 </html>
